# rsvpapp

./: .dockerignore  .gitignore  Dockerfile  Procfile  README.md  auth.py  docker-compose.yml  fly.toml  models.py  pyproject.toml  pytest.ini  requirements.txt  rsvp.py  run.py  terms-of-service.md  utils.py  web-variables.env.template
.github/workflows/: main.yml
cron/: Dockerfile  fly.toml
doc/adr/: 0002-don-t-save-google-tokens-in-the-db.md  0003-remember-logged-in-users-and-switch-to-basic-session-protection.md  0004-backup-nightly-to-dropbox.md
migrations/: 0001_use_flask_mongoengine.py  0002_email_to_rsvp_by.py  0003_no_tokens.py  0004_fix_name_nick.py  0005_rsvp_name_to_user.py  0006_multiple_authors.py  0007_per_team_role.py  20180405_make_embedded_documents.py
rsvp/: __init__.py  api.py  app.py  cloudinary_utils.py  gdrive_utils.py  models.py  rudolph.py  splitwise_utils.py  splitwise_views.py  utils.py  views.py  zulip_utils.py
rsvp/settings/: conf.py  test.py
rsvp/static/: calendar.js  event.js  map.css  register-service-worker.js  style.css  sw.js  upload.js  utils.js
rsvp/templates/: approval_awaited.html  approve_users.html  archived.html  attendance.html  awaiting_approval.txt  base.html  bookmarks.html  calendar.html  demo-request-success.html  demo-requests.html  event-editor.html  event-gdrive.html  event-splitwise.html  event-teams.html  event.html  event.md  features.html  full-names.md  images.html  index.html  latest-posts.html  login.html  post.html  (+32 more)
scripts/: alley  archive_events.py  cron.py  deploy  gdrive_sync  manage_apps  manage_bookmarks  manage_db  manage_dokku_apps  manage_events  manage_events.py  manage_users  manage_users.py  scheduler-daily  scheduler-hourly  update_gdrive_permissions  update_gdrive_photos
settings/: conf.py  test.py
shutdown/: delete_dropbox_backups.py  posts_to_hugo.py  runbook.org  tiks_stats.py
static/: style.css
templates/: archived.html  base.html  create-event.html  event.html  event.md  hello.html  index.html  login.html  profile.html  users.html
tests/: test_rsvpapp.py
(+3 files in other folders)
