[tool.poetry]
name = "rsvpapp"
version = "0.9.0"
description = "Google OAuth based RSVP application"
authors = ["Puneeth Chaganti <punchagan@muse-amuse.in>"]
license = "Apache-2.0 License"

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.32.2"
beautifulsoup4 = "^4.10.0"
alley = "^0.0.3"
Flask-Versioned = { git = "https://github.com/pilt/flask-versioned.git", rev = "c6591bc9a5605242d5d82dd4e3bf30c11452748e" }
altair = "^4.1.0"
sendgrid = "5.3.0"
dropbox = "^11.25.0"
arrow = "^1.2.1"
cloudinary = "^1.28.0"
google-api-python-client = "^2.31.0"
gunicorn = "^22.0.0"
dnspython = "^2.6.1"
Flask = "^2.2.2"
click = "^8.1.3"
Flask-Dance = "^6.1.1"
Flask-Login = "^0.6.2"
cachelib = "^0.9.0"
mistune = "^2.0.4"
flask-mongoengine = "^1.0.0"
blinker = "^1.5"
zulip = "^0.8.2"
schedule = "^1.1.0"

[tool.poetry.dev-dependencies]
ipython = "^8.10.0"
pytest = "^7.1.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
